fiz o css do texto/imagem

--- a/index.css
+++ b/index.css
@@ -3,12 +3,8 @@ color: red;
 }
 
 p{
-    width: 400px;
-    height: 600px;
-}
+    font-weight: bold;
 
-input[type = "text"]{
-    width: 100px;
-    height: 20px;
-    color: white;
+
 }
+img{width: 400px; height: 600px;}
